fix: gradle builds with --enable-preview flag